Closed
Bug 1389133
Opened 8 years ago
Closed 8 years ago
gtk_widget_get_style_context: assertion 'GTK_IS_WIDGET (widget)' failed
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla57
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | fixed |
| firefox57 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
karlt
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
There's a minor regression from Bug 1365556.
MOZ_GTK_COMBOBOX_SEPARATOR may not be defined for some themes so GetWidget(MOZ_GTK_COMBOBOX_SEPARATOR) can return null. We count with that:
https://dxr.mozilla.org/mozilla-central/source/widget/gtk/gtk3drawing.cpp#1122
but the patch from Bug 1365556 always expect widget != null and calls gtk_widget_get_style_context(widget) on it which causes the
gtk_widget_get_style_context: assertion 'GTK_IS_WIDGET (widget)' failed
message.
| Comment hidden (mozreview-request) |
status-firefox55:
--- → unaffected
status-firefox56:
--- → affected
status-firefox-esr52:
--- → unaffected
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8895886 [details]
Bug 1389133 - don't invalidate style content for missing widgets,
https://reviewboard.mozilla.org/r/167168/#review172578
Thank you :)
Attachment #8895886 -
Flags: review?(karlt) → review+
Updated•8 years ago
|
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Updated•8 years ago
|
Assignee: nobody → stransky
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/dcbf487465de
don't invalidate style content for missing widgets, r=karlt
Keywords: checkin-needed
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Comment 6•8 years ago
|
||
Please nominate this for Beta approval when you get a chance.
Flags: needinfo?(stransky)
| Assignee | ||
Comment 7•8 years ago
|
||
Comment on attachment 8895886 [details]
Bug 1389133 - don't invalidate style content for missing widgets,
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1365556
[User impact if declined]: Error messages on console, crash on some systems (Bug 1388810)
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: not risky, it's a straightforward null pointer check
[String changes made/needed]: none
Flags: needinfo?(stransky)
Attachment #8895886 -
Flags: approval-mozilla-beta?
Comment 9•8 years ago
|
||
Comment on attachment 8895886 [details]
Bug 1389133 - don't invalidate style content for missing widgets,
Fix a regression. Beta56+.
Attachment #8895886 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 10•8 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•