Bug 1389133 - Don't invalidate style content for missing widgets. r=karlt, a=gchang

MozReview-Commit-ID: 2KfjYGvsiVv